# arts-browser

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: test.css  test.html
src/: ast.rs  ast_css.rs  ast_html.rs  canvas.rs  cli.rs  cli.yml  css.pest  display.rs  html.lalrpop  html.pest  html.rs  layout.rs  main.rs  mod.rs  parse.rs  parse_css.rs  parse_html.rs  style.rs
src/css/: ast.rs  ast_css.rs  color.rs  mod.rs  parse.rs  parse_css.rs  property.rs  property_name.rs
src/font/: entity.rs  mod.rs  paint.rs  rasterize.rs
src/html/: ast.rs  grammer.lalrpop  html.pest  mod.rs  parse.rs  parse_html.rs
src/layout/: anonymouse_block.rs  block.rs  entity.rs  layout.rs  layout_box.rs  mod.rs
src/mock/: element.rs  mod.rs  stylesheet.rs
src/paint/: background.rs  border.rs  canvas.rs  entity.rs  font.rs  mod.rs  paint.rs  utils.rs
