[package]
name = "parser"
version = "0.1.0"
authors = ["watkazuki <watkazuki03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
anyhow = "1.0"
clap = { version = "3.0.0-beta.4", features = ["yaml"] }
image = "0.23.14"
regex = "1"
